welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:24: error: '=' expected but ';' found.
	if  (getX()!=6 && getY()!=6){
^